[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wowtube"
version = "0.1.0"
description = "A video download and streaming server"
dependencies = [
    "yt-dlp==2026.3.17",
    "pyftpdlib==2.2.0",
    "pandas==3.0.2",
    "Pillow==12.2.0",
]